@@ -1,55 +1,46 @@
-// AbstractLight.java
-
 package jmri.implementation;
-import java.util.ArrayList;
-import jmri.*;
 
- /**
- * Abstract class providing partial implementation of the 
- *      the Light interface.
+import java.util.ArrayList;
+import jmri.Light;
+
+/**
+ * Abstract class providing partial implementation of the the Light interface.
  * <P>
- * Light objects require a number of instance variables.  Since 
- *     Light objects are created using the standard JMRI 
- *     systemName/userName concept, accessor routines are provided
- *     for setting and editting these instance variables.
+ * Light objects require a number of instance variables. Since Light objects are
+ * created using the standard JMRI systemName/userName concept, accessor
+ * routines are provided for setting and editting these instance variables.
  * <P>
- * Each Light may have one or more control mechanisms, of the 
- *		types defined in the Light interface. A Light may also not 
- *		have any control mechanisms defined. 
+ * Each Light may have one or more control mechanisms, of the types defined in
+ * the Light interface. A Light may also not have any control mechanisms
+ * defined.
  * <P>
- * Information for each control mechanism is held in LightControl 
- *		objects, which also implement the logic for control. A 
- *		list of LightControls, if any, is kept here, and 
- *		activation and deactivation of LightControls is through 
- *		this module.
+ * Information for each control mechanism is held in LightControl objects, which
+ * also implement the logic for control. A list of LightControls, if any, is
+ * kept here, and activation and deactivation of LightControls is through this
+ * module.
  * <P>
- * Instance variables are divided into system-independent and
- *    system dependent categories.  System independent instance
- *    variables are defined here, and their accessor routines are
- *    implemented here.
+ * Instance variables are divided into system-independent and system dependent
+ * categories. System independent instance variables are defined here, and their
+ * accessor routines are implemented here.
  * <p>
- * This implementation provides a notional implementation of 
- * intensity and transitions.  The user can set intensity
- * so long as it's at least the max value (default 1.0) or
- * no more than the minimum value (default 0.0). In that case,
- * the setTargetIntensity operations become a setState to ON
- * or OFF.  Setting a target intensity between the min and max
- * is an error, because this type of Light does not support
- * a true analog intensity.
- * Transitions never happen, and setting a TransitionTime
- * greater than 0.0 gives an exception.
+ * This implementation provides a notional implementation of intensity and
+ * transitions. The user can set intensity so long as it's at least the max
+ * value (default 1.0) or no more than the minimum value (default 0.0). In that
+ * case, the setTargetIntensity operations become a setState to ON or OFF.
+ * Setting a target intensity between the min and max is an error, because this
+ * type of Light does not support a true analog intensity. Transitions never
+ * happen, and setting a TransitionTime greater than 0.0 gives an exception.
  * <p>
- * Since this form of Light does not do variable intensity
- * nor transitions, it stores both CurrentIntensity and 
- * TargetIntensity in a single location, forcing them to be the same
+ * Since this form of Light does not do variable intensity nor transitions, it
+ * stores both CurrentIntensity and TargetIntensity in a single location,
+ * forcing them to be the same
  *
  * @author	Dave Duchamp Copyright (C) 2004, 2010
  * @author	Ken Cameron Copyright (C) 2008
  * @author	Bob Jacobsen Copyright (C) 2008
- * @version     $Revision$
  */
 public abstract class AbstractLight extends AbstractNamedBean
-    implements Light, java.io.Serializable {
+        implements Light, java.io.Serializable {
 
     public AbstractLight(String systemName, String userName) {
         super(systemName.toUpperCase(), userName);
@@ -58,73 +49,92 @@ public abstract class AbstractLight extends AbstractNamedBean
     public AbstractLight(String systemName) {
         super(systemName.toUpperCase());
     }
-    
+
+    public String getBeanType() {
+        return Bundle.getMessage("BeanNameLight");
+    }
+
     /**
-     *  System independent instance variables (saved between runs)
+     * System independent instance variables (saved between runs)
      */
-	protected ArrayList<LightControl> lightControlList = new ArrayList<LightControl>();
-	protected double mMaxIntensity = 1.0;
-	protected double mMinIntensity = 0.0;
-	
+    protected ArrayList<LightControl> lightControlList = new ArrayList<LightControl>();
+    protected double mMaxIntensity = 1.0;
+    protected double mMinIntensity = 0.0;
+
     /**
-     *  System independent operational instance variables (not saved between runs)
+     * System independent operational instance variables (not saved between
+     * runs)
      */
     protected boolean mActive = false;
-    protected boolean mEnabled = true;    
+    protected boolean mEnabled = true;
     protected double mCurrentIntensity = 0.0;
     protected int mState = OFF;
 
     /**
      * Get enabled status
-    */
-    public boolean getEnabled() { return mEnabled; }
+     */
+    public boolean getEnabled() {
+        return mEnabled;
+    }
+
     /**
      * Set enabled status
      */
-    public void setEnabled(boolean v) { 
+    public void setEnabled(boolean v) {
         boolean old = mEnabled;
         mEnabled = v;
-        if (old != v) firePropertyChange("Enabled", Boolean.valueOf(old), Boolean.valueOf(v));
+        if (old != v) {
+            firePropertyChange("Enabled", Boolean.valueOf(old), Boolean.valueOf(v));
+        }
     }
 
-    /** Check if this object can handle variable intensity.
+    /**
+     * Check if this object can handle variable intensity.
      * <P>
-     * @return false, as this abstract class does not implement
-     * variable intensity. See e.g. {@link AbstractVariableLight} for 
-     * an abstract implementation of variable intensity.
-    */
+     * @return false, as this abstract class does not implement variable
+     *         intensity. See e.g. {@link AbstractVariableLight} for an abstract
+     *         implementation of variable intensity.
+     */
     public boolean isIntensityVariable() {
         return false;
     }
-    
-   /** Set the intended new intensity value for the Light.
-    *  <p>
-    *  Bound property between 0 and 1. 
-    *  <p>
-    *  A value of 0.0 corresponds to full off, and 
-    *  a value of 1.0 corresponds to full on.
-    *  <p>
-    *  Values at or below
-    *  the minIntensity property will result in the Light going
-    *  to the OFF state immediately. 
-    *  Values at or above the maxIntensity property
-    *  will result in the Light going to the ON state immediately.  
-    *  <p>
-    *  All others result in an exception, instead of the
-    *  INTERMEDIATE state, because this class does not implement analog intensity
-    *  <P>
-    *  @throws IllegalArgumentException when intensity is less than 0.0 or more than 1.0
-    *  @throws IllegalArgumentException when intensity is more than MinIntensity and less than MaxIntensity
-    */
+
+    /**
+     * Set the intended new intensity value for the Light.
+     * <p>
+     * Bound property between 0 and 1.
+     * <p>
+     * A value of 0.0 corresponds to full off, and a value of 1.0 corresponds to
+     * full on.
+     * <p>
+     * Values at or below the minIntensity property will result in the Light
+     * going to the OFF state immediately. Values at or above the maxIntensity
+     * property will result in the Light going to the ON state immediately.
+     * <p>
+     * All others result in an exception, instead of the INTERMEDIATE state,
+     * because this class does not implement analog intensity
+     * <P>
+     * @throws IllegalArgumentException when intensity is less than 0.0 or more
+     *                                  than 1.0
+     * @throws IllegalArgumentException when intensity is more than MinIntensity
+     *                                  and less than MaxIntensity
+     */
     public void setTargetIntensity(double intensity) {
-        if (log.isDebugEnabled()) log.debug("setTargetIntensity "+intensity);
-        if (intensity<0.0 || intensity>1.0) 
-            throw new IllegalArgumentException("Target intensity value "+intensity+" not in legal range");
+        if (log.isDebugEnabled()) {
+            log.debug("setTargetIntensity " + intensity);
+        }
+        if (intensity < 0.0 || intensity > 1.0) {
+            throw new IllegalArgumentException("Target intensity value " + intensity + " not in legal range");
+        }
 
         // limit
-        if (intensity > mMaxIntensity ) intensity = mMaxIntensity;
-        if (intensity < mMinIntensity ) intensity = mMinIntensity;
-        
+        if (intensity > mMaxIntensity) {
+            intensity = mMaxIntensity;
+        }
+        if (intensity < mMinIntensity) {
+            intensity = mMinIntensity;
+        }
+
         // move directly to target, if possible
         if (intensity >= mMaxIntensity) {
             updateIntensityHigh(intensity);
@@ -134,10 +144,10 @@ public abstract class AbstractLight extends AbstractNamedBean
             updateIntensityIntermediate(intensity);
         }
     }
-    
+
     /**
-     * Method for further implementation of 
-     * setTargetIntensity at or below the minimum.
+     * Method for further implementation of setTargetIntensity at or below the
+     * minimum.
      * <p>
      * Does not change state.
      */
@@ -145,21 +155,21 @@ public abstract class AbstractLight extends AbstractNamedBean
         notifyTargetIntensityChange(intensity);
         setState(OFF);
     }
-    
+
     /**
-     * Method for further implementation of 
-     * setTargetIntensity between min and max
+     * Method for further implementation of setTargetIntensity between min and
+     * max
      * <p>
      * Does not change state.
      */
     protected void updateIntensityIntermediate(double intensity) {
         // not in value range!
-        throw new IllegalArgumentException("intensity value "+intensity+" between min "+mMinIntensity+" and max "+mMaxIntensity);
+        throw new IllegalArgumentException("intensity value " + intensity + " between min " + mMinIntensity + " and max " + mMaxIntensity);
     }
-    
+
     /**
-     * Method for further implementation of 
-     * setTargetIntensity at or above the maximum
+     * Method for further implementation of setTargetIntensity at or above the
+     * maximum
      * <p>
      * Does not change state.
      */
@@ -167,242 +177,279 @@ public abstract class AbstractLight extends AbstractNamedBean
         notifyTargetIntensityChange(intensity);
         setState(ON);
     }
-    
-    /** Get the current intensity value.
-     * If the Light is currently transitioning, this may be either
-     * an intermediate or final value.
+
+    /**
+     * Get the current intensity value. If the Light is currently transitioning,
+     * this may be either an intermediate or final value.
      * <p>
-     * A value of 0.0 corresponds to full off, and 
-     * a value of 1.0 corresponds to full on.
-    */
+     * A value of 0.0 corresponds to full off, and a value of 1.0 corresponds to
+     * full on.
+     */
     public double getCurrentIntensity() {
         return mCurrentIntensity;
     }
-    
-    /** Get the target intensity value for the 
-     * current transition, if any. If the Light is not currently
-     * transitioning, this is the current intensity value.
+
+    /**
+     * Get the target intensity value for the current transition, if any. If the
+     * Light is not currently transitioning, this is the current intensity
+     * value.
      * <p>
-     * A value of 0.0 corresponds to full off, and 
-     * a value of 1.0 corresponds to full on.
+     * A value of 0.0 corresponds to full off, and a value of 1.0 corresponds to
+     * full on.
      * <p>
      * Bound property
-    */
-    public double  getTargetIntensity() {
+     */
+    public double getTargetIntensity() {
         return mCurrentIntensity;
     }
-    
-    /** Set the value of the maxIntensity property.
+
+    /**
+     * Set the value of the maxIntensity property.
      * <p>
-     * Bound property between 0 and 1. 
+     * Bound property between 0 and 1.
      * <p>
-     * A value of 0.0 corresponds to full off, and 
-     * a value of 1.0 corresponds to full on.
-     * @throws IllegalArgumentException when intensity is less than 0.0 or more than 1.0
-     * @throws IllegalArgumentException when intensity is not greater than the current value of the minIntensity property
-    */
-    @edu.umd.cs.findbugs.annotations.SuppressWarnings(value="FE_FLOATING_POINT_EQUALITY") // OK to compare floating point
+     * A value of 0.0 corresponds to full off, and a value of 1.0 corresponds to
+     * full on.
+     *
+     * @throws IllegalArgumentException when intensity is less than 0.0 or more
+     *                                  than 1.0
+     * @throws IllegalArgumentException when intensity is not greater than the
+     *                                  current value of the minIntensity
+     *                                  property
+     */
+    @edu.umd.cs.findbugs.annotations.SuppressFBWarnings(value = "FE_FLOATING_POINT_EQUALITY") // OK to compare floating point
     public void setMaxIntensity(double intensity) {
-        if (intensity<0.0 || intensity>1.0) 
-            throw new IllegalArgumentException("Illegal intensity value: "+intensity);
-        if (intensity <= mMinIntensity) 
-            throw new IllegalArgumentException("Requested intensity "+intensity+" not less than minIntensity "+mMinIntensity);
+        if (intensity < 0.0 || intensity > 1.0) {
+            throw new IllegalArgumentException("Illegal intensity value: " + intensity);
+        }
+        if (intensity <= mMinIntensity) {
+            throw new IllegalArgumentException("Requested intensity " + intensity + " not less than minIntensity " + mMinIntensity);
+        }
 
         double oldValue = mMaxIntensity;
         mMaxIntensity = intensity;
-        
-        if (oldValue != intensity)
-            firePropertyChange("MaxIntensity", new Double(oldValue), new Double(intensity));
+
+        if (oldValue != intensity) {
+            firePropertyChange("MaxIntensity", Double.valueOf(oldValue), Double.valueOf(intensity));
+        }
     }
-    
-    /** Get the current value of the maxIntensity property.
+
+    /**
+     * Get the current value of the maxIntensity property.
      * <p>
-     * A value of 0.0 corresponds to full off, and 
-     * a value of 1.0 corresponds to full on.
-    */
+     * A value of 0.0 corresponds to full off, and a value of 1.0 corresponds to
+     * full on.
+     */
     public double getMaxIntensity() {
         return mMaxIntensity;
     }
-    
-    /** Set the value of the minIntensity property.
+
+    /**
+     * Set the value of the minIntensity property.
      * <p>
-     * Bound property between 0 and 1. 
+     * Bound property between 0 and 1.
      * <p>
-     * A value of 0.0 corresponds to full off, and 
-     * a value of 1.0 corresponds to full on.
-     * @throws IllegalArgumentException when intensity is less than 0.0 or more than 1.0
-     * @throws IllegalArgumentException when intensity is not less than the current value of the maxIntensity property
-    */
-    @edu.umd.cs.findbugs.annotations.SuppressWarnings(value="FE_FLOATING_POINT_EQUALITY") // OK to compare floating point
+     * A value of 0.0 corresponds to full off, and a value of 1.0 corresponds to
+     * full on.
+     *
+     * @throws IllegalArgumentException when intensity is less than 0.0 or more
+     *                                  than 1.0
+     * @throws IllegalArgumentException when intensity is not less than the
+     *                                  current value of the maxIntensity
+     *                                  property
+     */
+    @edu.umd.cs.findbugs.annotations.SuppressFBWarnings(value = "FE_FLOATING_POINT_EQUALITY") // OK to compare floating point
     public void setMinIntensity(double intensity) {
-        if (intensity<0.0 || intensity>1.0) 
-            throw new IllegalArgumentException("Illegal intensity value: "+intensity);
-        if (intensity >= mMaxIntensity) 
-            throw new IllegalArgumentException("Requested intensity "+intensity+" not more than maxIntensity "+mMaxIntensity);
+        if (intensity < 0.0 || intensity > 1.0) {
+            throw new IllegalArgumentException("Illegal intensity value: " + intensity);
+        }
+        if (intensity >= mMaxIntensity) {
+            throw new IllegalArgumentException("Requested intensity " + intensity + " not more than maxIntensity " + mMaxIntensity);
+        }
 
         double oldValue = mMinIntensity;
         mMinIntensity = intensity;
 
-        if (oldValue != intensity)
-            firePropertyChange("MinIntensity", new Double(oldValue), new Double(intensity));
+        if (oldValue != intensity) {
+            firePropertyChange("MinIntensity", Double.valueOf(oldValue), Double.valueOf(intensity));
+        }
     }
-    
-    /** 
+
+    /**
      * Get the current value of the minIntensity property.
      * <p>
-     * A value of 0.0 corresponds to full off, and 
-     * a value of 1.0 corresponds to full on.
+     * A value of 0.0 corresponds to full off, and a value of 1.0 corresponds to
+     * full on.
      */
     public double getMinIntensity() {
         return mMinIntensity;
     }
-    
-    /** 
+
+    /**
      * Can the Light change it's intensity setting slowly?
      * <p>
-     * If true, this Light supports a non-zero value of the 
-     * transitionTime property, which controls how long the Light
-     * will take to change from one intensity level to another.
+     * If true, this Light supports a non-zero value of the transitionTime
+     * property, which controls how long the Light will take to change from one
+     * intensity level to another.
      * <p>
      * Unbound property
      */
-    public boolean isTransitionAvailable() { return false; }
-    
-    /** 
-     * Set the fast-clock duration for a 
-     * transition from full ON to full OFF or vice-versa.
+    public boolean isTransitionAvailable() {
+        return false;
+    }
+
+    /**
+     * Set the fast-clock duration for a transition from full ON to full OFF or
+     * vice-versa.
      * <P>
-     * This class does not implement transitions, so this property
-     * cannot be set from zero.
+     * This class does not implement transitions, so this property cannot be set
+     * from zero.
      * <p>
      * Bound property
      * <p>
      * @throws IllegalArgumentException if minutes is not 0.0
      */
     public void setTransitionTime(double minutes) {
-        if (minutes != 0.0) throw new IllegalArgumentException("Illegal transition time: "+minutes);
+        if (minutes != 0.0) {
+            throw new IllegalArgumentException("Illegal transition time: " + minutes);
+        }
     }
-    
-    /** 
-     * Get the number of fastclock minutes taken by a transition from
-     * full ON to full OFF or vice versa.
+
+    /**
+     * Get the number of fastclock minutes taken by a transition from full ON to
+     * full OFF or vice versa.
      * <p>
      * @return 0.0 if the output intensity transition is instantaneous
      */
-    public double getTransitionTime() { return 0.0; }
-    
-    /** 
-     * Convenience method for checking if the intensity of the light is currently
-     * changing due to a transition.
+    public double getTransitionTime() {
+        return 0.0;
+    }
+
+    /**
+     * Convenience method for checking if the intensity of the light is
+     * currently changing due to a transition.
      * <p>
-     * Bound property so that listeners can conveniently learn when the transition is over.
+     * Bound property so that listeners can conveniently learn when the
+     * transition is over.
      */
-    public boolean isTransitioning() { return false; }
-	
-	/** 
-     * Handle a request for a state change. For these lights,
-     * ON and OFF just transition immediately
-     * between MinIntensity and MaxIntensity
+    public boolean isTransitioning() {
+        return false;
+    }
+
+    /**
+     * Handle a request for a state change. For these lights, ON and OFF just
+     * transition immediately between MinIntensity and MaxIntensity
      */
-	public void setState(int newState) {
-        if (log.isDebugEnabled()) log.debug("setState "+newState+" was "+mState);
-	    //int oldState = mState;
-	    if ( newState != ON && newState != OFF) 
-	        throw new IllegalArgumentException("cannot set state value "+newState);
-	    double intensity = getTargetIntensity();
-	    if (newState == ON && intensity < getMaxIntensity() ) {
-	        setTargetIntensity(getMaxIntensity());
-	        // stop if state change was done as part of setTargetIntensity
-	        if (getState() == ON) return;
-	    }
-	    if (newState == OFF && intensity > getMinIntensity() ) {
-	        setTargetIntensity(getMinIntensity());
-	        // stop if state change was done as part of setTargetIntensity
-	        if (getState() == OFF) return;
+    public void setState(int newState) {
+        if (log.isDebugEnabled()) {
+            log.debug("setState " + newState + " was " + mState);
+        }
+        //int oldState = mState;
+        if (newState != ON && newState != OFF) {
+            throw new IllegalArgumentException("cannot set state value " + newState);
+        }
+        double intensity = getTargetIntensity();
+        if (newState == ON && intensity < getMaxIntensity()) {
+            setTargetIntensity(getMaxIntensity());
+            // stop if state change was done as part of setTargetIntensity
+            if (getState() == ON) {
+                return;
+            }
+        }
+        if (newState == OFF && intensity > getMinIntensity()) {
+            setTargetIntensity(getMinIntensity());
+            // stop if state change was done as part of setTargetIntensity
+            if (getState() == OFF) {
+                return;
+            }
         }
         // do the state change in the hardware
-	    doNewState(mState, newState); // old state, new state
-	    // change value and tell listeners
+        doNewState(mState, newState); // old state, new state
+        // change value and tell listeners
         notifyStateChange(mState, newState);
-	}
+    }
 
     /**
      * Change the stored target intensity value and do notification, but don't
      * change anything in the hardware
      */
-    @edu.umd.cs.findbugs.annotations.SuppressWarnings(value="FE_FLOATING_POINT_EQUALITY") // OK to compare floating point
-	protected void notifyTargetIntensityChange(double intensity) {
-	    double oldValue = mCurrentIntensity;
-	    mCurrentIntensity = intensity;
-        if (oldValue != intensity)
-            firePropertyChange("TargetIntensity", new Double(oldValue), new Double(intensity));
+    @edu.umd.cs.findbugs.annotations.SuppressFBWarnings(value = "FE_FLOATING_POINT_EQUALITY") // OK to compare floating point
+    protected void notifyTargetIntensityChange(double intensity) {
+        double oldValue = mCurrentIntensity;
+        mCurrentIntensity = intensity;
+        if (oldValue != intensity) {
+            firePropertyChange("TargetIntensity", Double.valueOf(oldValue), Double.valueOf(intensity));
+        }
     }
-    
+
     /**
-     * Change the stored state value and do notification, but don't
-     * change anything in the hardware
+     * Change the stored state value and do notification, but don't change
+     * anything in the hardware
      */
-	protected void notifyStateChange(int oldState, int newState) {
-	    mState = newState;
-	    if (oldState!=newState)
-	        firePropertyChange("KnownState", Integer.valueOf(oldState), Integer.valueOf(newState));
-	}
-	
-	/**
-	 * Implement the specific change of state needed by hardware
-	 */
-	protected void doNewState(int oldState, int newState) {}
-
-	public int getState() {
-	    return mState;
-	}
+    protected void notifyStateChange(int oldState, int newState) {
+        mState = newState;
+        if (oldState != newState) {
+            firePropertyChange("KnownState", Integer.valueOf(oldState), Integer.valueOf(newState));
+        }
+    }
 
     /**
-     * Activates a light activating all its LightControl objects.  
+     * Implement the specific change of state needed by hardware
+     */
+    protected void doNewState(int oldState, int newState) {
+    }
+
+    public int getState() {
+        return mState;
+    }
+
+    /**
+     * Activates a light activating all its LightControl objects.
      */
     public void activateLight() {
-		for (int i = 0; i<lightControlList.size(); i++) {
-			LightControl lc = lightControlList.get(i);
-			lc.activateLightControl();
-		}
-	}
-		
+        for (int i = 0; i < lightControlList.size(); i++) {
+            LightControl lc = lightControlList.get(i);
+            lc.activateLightControl();
+        }
+    }
+
     /**
-     * Deactivates a light by deactivating each of its LightControl objects. 
+     * Deactivates a light by deactivating each of its LightControl objects.
      */
     public void deactivateLight() {
         // skip if Light is not active
         if (mActive) {
-			for (int i = 0; i<lightControlList.size(); i++) {
-				LightControl lc = lightControlList.get(i);
-				lc.deactivateLightControl();
-			}
-			mActive = false;
-		}
-	}
-		
-	/**
-	 * LightControl management methods
-	 */
-	public void clearLightControls() {
-		// deactivate all Light Controls if any are active
-		deactivateLight();
-		// clear all LightControls, if there are any
-		for (int i = lightControlList.size()-1; i>=0; i--) {
-			lightControlList.remove(i);
-		}
-	}
-	public void addLightControl(jmri.implementation.LightControl c) {
-		lightControlList.add(c);	
-	}
-	public ArrayList<LightControl> getLightControlList() {
-		ArrayList<LightControl> listCopy = new ArrayList<LightControl>();
-		for (int i = 0; i<lightControlList.size() ; i++) {
-			listCopy.add(lightControlList.get(i));
-		} 
-		return listCopy;
-	} 
+            for (int i = 0; i < lightControlList.size(); i++) {
+                LightControl lc = lightControlList.get(i);
+                lc.deactivateLightControl();
+            }
+            mActive = false;
+        }
+    }
 
+    /**
+     * LightControl management methods
+     */
+    public void clearLightControls() {
+        // deactivate all Light Controls if any are active
+        deactivateLight();
+        // clear all LightControls, if there are any
+        for (int i = lightControlList.size() - 1; i >= 0; i--) {
+            lightControlList.remove(i);
+        }
+    }
+
+    public void addLightControl(jmri.implementation.LightControl c) {
+        lightControlList.add(c);
+    }
+
+    public ArrayList<LightControl> getLightControlList() {
+        ArrayList<LightControl> listCopy = new ArrayList<LightControl>();
+        for (int i = 0; i < lightControlList.size(); i++) {
+            listCopy.add(lightControlList.get(i));
+        }
+        return listCopy;
+    }
+
+    private final static org.slf4j.Logger log = org.slf4j.LoggerFactory.getLogger(AbstractLight.class);
 }
-
-/* @(#)AbstractLight.java */
